--- a/bin/Dockerfile-mainnet
+++ b/bin/Dockerfile-mainnet
@@ -4,6 +4,7 @@ RUN apk add bind-tools
 RUN  apk update && \
      apk add libc6-compat && \
      apk add ca-certificates
+     apk add logrotate
      
 ARG commit=commit
 ENV commit=$commit
