--- a/bin/Dockerfile-mainnet
+++ b/bin/Dockerfile-mainnet
@@ -3,7 +3,7 @@ FROM alpine:3.9
 RUN apk add bind-tools
 RUN  apk update && \
      apk add libc6-compat && \
-     apk add ca-certificates
+     apk add ca-certificates && \
      apk add logrotate
      
 ARG commit=commit
