--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   incognito-chain:
     container_name: incognito-chain
-    image: incognito
+    image: hoangincognito/incognito-chain
     ports:
       - "9334:9334"
     depends_on:
@@ -11,4 +11,4 @@ services:
       - incognito-highway
   incognito-highway:
     container_name: incognito-highway
-    image: highway
+    image: hoangincognito/incognitochain-highway
