--- a/bin/centralized-logging/fluentd/fluent.conf
+++ b/bin/centralized-logging/fluentd/fluent.conf
@@ -1,7 +1,7 @@
 <source>
   @type tail
   @id input_tail
-  path /data/*/*.log
+  path /data/*/*.cur.log
   pos_file /tailpos/t.log.pos
   read_from_head false
   tag file.*
@@ -9,7 +9,6 @@
     @type none
   </parse>
 </source>
-
 
 <match file.**>
    @type http
