--- a/bin/Dockerfile
+++ b/bin/Dockerfile
@@ -1,11 +1,14 @@
-FROM alpine:3.9
+FROM ubuntu:16.04
 
-RUN apk add bind-tools
-RUN  apk update && \
-     apk add libc6-compat && \
-     apk add ca-certificates && \
-     apk add logrotate
-     
+RUN apt-get update
+RUN apt-get install -y ca-certificates cronolog cron
+RUN apt-get install -y dnsutils
+
+
+COPY removeoldlog /etc/cron.d/removeoldlog
+RUN chmod 0644 /etc/cron.d/removeoldlog
+RUN crontab /etc/cron.d/removeoldlog
+
 ARG commit=commit
 ENV commit=$commit
 
