--- a/bin/centralized-logging/fluentd/fluent.conf
+++ b/bin/centralized-logging/fluentd/fluent.conf
@@ -1,9 +1,9 @@
 <source>
   @type tail
   @id input_tail
-  path /data/*/*.cur.log
+  path /data/*/*.log
   pos_file /tailpos/t.log.pos
-  read_from_head false
+  read_from_head true
   tag file.*
   <parse>
     @type none
