- update for deploy testnet

--- a/bin/Dockerfile
+++ b/bin/Dockerfile
@@ -12,6 +12,7 @@ ENV commit=$commit
 
 COPY ./bootnode /
 COPY ./keylist.json /
+COPY ./keylist-v2.json /
 COPY ./keylist_256.json /
 COPY ./sample-config.conf /
 
